second trail: fixed the scroll bar glitch and trail for fixed the manu and nav blur on mobile phones

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,8 +22,8 @@
   isolation: isolate;
   overflow: hidden;
   align-items: center;
-  -webkit-backdrop-filter: blur(6px);
-  backdrop-filter: blur(6px);
+  /* -webkit-backdrop-filter: blur(6px); */
+  /* backdrop-filter: blur(6px); */
   border-radius: 32px;
   box-shadow: inset 0 -7px 11px #a48fff1f;
   display: flex;
@@ -54,15 +54,20 @@
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-.scrollbar-hidden {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+/* .scrollbar-hidden {
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
 }
 .scrollbar-hidden::-webkit-scrollbar {
   display: none;
-}
+} */
 
 html {
+  scrollbar-width: none;
   scroll-behavior: smooth;
   overflow-x: hidden;
+}
+
+body {
+  scrollbar-width: none;
 }
